# aiogram-template

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  logging.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml
deploy/: Dockerfile
src/: config_schema.py  prepare.py
src/bot/: __main__.py  app.py  dispatcher.py  filters.py  logging_.py  middlewares.py  utils.py
src/bot/routers/: admin.py  commands.py  registration.py  start_help_menu.py  user.py
