[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = ""
authors = ["one-zero-eight <https://t.me/one_zero_eight>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
colorlog = "^6.8.2"
aiogram = "^3.10.0"
aiogram-dialog = "^2.1.0"
redis = "^5.0.7"
pyyaml = "^6.0.1"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pre-commit = "^3.7.1"

[tool.poetry.group.ci]
optional = true
[tool.poetry.group.ci.dependencies]
pydantic = "^2.8.2"
pre-commit = "^3.7.1"

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
