[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = ""
authors = ["one-zero-eight <https://t.me/one_zero_eight>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
aiogram-dialog = "^2.2.0"
colorlog = "^6.8.2"
pre-commit = "^3.8.0"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
redis = "^5.1.0"
ruff = "^0.6.8"

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
